[lib]
name = "camcam"
path = "src/lib.rs"

[package]
name = "camcam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# algorithms = {  git = "https://github.com/Monksc/algorithms_rust_lib", rev = "c3bc40e"}
algorithms = { path = "../algorithms_rust_lib/" }
# range_map = {  git = "https://github.com/Monksc/range_map", rev = "d1e2994"}
range_map = { path = "../range_map/" }
ordered-float = "3.4.0"

