[lib]
name = "camcam"
path = "src/lib.rs"

[package]
name = "camcam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algorithms = { git = "https://github.com/Monksc/algorithms_rust_lib", rev = "e6b3a52e3aa6b666cae9c08b7fd69f7605356b54" }
#algorithms = { path = "../algorithms_rust_lib/" }
range_map = { git = "https://github.com/Monksc/range_map", rev = "dd7b6b1c5c0f4bda2d23fd242fe281091cd5cfb6" }
#range_map = { path = "../range_map/" }
ordered-float = "3.4.0"
offset-polygon = "0.1.0"
geo-clipper = "0.7.3"
geo-types = "0.7.3"
serde = { version = "1.0.183", features = ["derive"] }
once_cell = "1.19.0"
rand = "0.8.5"

